--- a/pegasus.properties
+++ b/pegasus.properties
@@ -13,7 +13,4 @@ pegasus.catalog.transformation.file=tc.txt
 # This is the name of the application for analytics
 pegasus.metrics.app=1000genome
 
-#pegasus.data.configuration=condorio
-pegasus.data.configuration=nonsharedfs
-
-pegasus.transfer.bypass.input.staging=true
+pegasus.data.configuration=condorio
